--- a/resume.qmd
+++ b/resume.qmd
@@ -1,86 +1,55 @@
 ---
 layout: cv
-title: Isaac Newtons's CV
+title: Kenneth Halling's CV
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Kenneth Halling
+Researcher, Writer, BYU-I Student.
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+<a href="https://github.com/kennyhalling">My GitHub</a>
 </div>
 
 
 ## Currently
 
-Standing on the shoulders of giants
+Majoring in Computer Science at BYU-Idaho and doing cybersecurity research on the side.
 
 ### Specialized in
 
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
+Journalistic writing, leadership, C# language
 
 
 ### Research interests
 
-Cooling, power series, optics, alchemy, planetary motions, apples.
+Cybersecurity legislation, coding languages, database management
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2014 - 2025`
+__McNeil High School, Austin, Texas.__
 
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
-
-
+`April 2021 - Now`
+__Brigham Young University - Idaho__
 
 ## Awards
 
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
-
+`2018`
+Eagle Scout, _"Boy Scouts of America"_, USA
 
 ## Occupation
 
-`1600`
-__Royal Mint__, London
+`2023`
+__Cybersecurity Researcher__, Crimson Vista, Remote Position
 
-- Warden
-- Minted coins
+- Researched recent cybersecurity events
+- Wrote weekly summaries about recent events
 
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
+`2021-2023`
+__Manufacturing Technician__, Sisu Devices, Austin, Texas
+
+- Assembled high-quality machines to sharpen knives
+- Collaborated with teammates to meet high quotas
 
 
 
